// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeCompleteScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeCompleteScreen
    copy={
      Object {
        "ctaLabel": "",
        "heading": "",
      }
    }
    isLoading={false}
    onCtaPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <withAnimatable(Image)
            animation="swing"
            delay={1000}
            direction="normal"
            iterationCount="infinite"
            iterationDelay={0}
            onAnimationBegin={[Function]}
            onAnimationEnd={[Function]}
            onTransitionBegin={[Function]}
            onTransitionEnd={[Function]}
            source={1}
            style={
              Object {
                "height": 70,
                "width": 70,
              }
            }
            useNativeDriver={false}
          />
          <Image
            source={1}
            style={
              Object {
                "bottom": -2,
                "height": 70,
                "position": "absolute",
                "width": 70,
              }
            }
          />
        </View>,
        <View
          style={
            Object {
              "marginTop": 38,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 70,
              }
            }
          >
            
          </YuText>
        </View>,
        <Button
          isLoading={false}
          label=""
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 74,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <withAnimatable(Image)
              animation="swing"
              delay={1000}
              direction="normal"
              iterationCount="infinite"
              iterationDelay={0}
              onAnimationBegin={[Function]}
              onAnimationEnd={[Function]}
              onTransitionBegin={[Function]}
              onTransitionEnd={[Function]}
              source={1}
              style={
                Object {
                  "height": 70,
                  "width": 70,
                }
              }
              useNativeDriver={false}
            />,
            <Image
              source={1}
              style={
                Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animation": "swing",
              "delay": 1000,
              "direction": "normal",
              "duration": undefined,
              "easing": undefined,
              "iterationCount": "infinite",
              "iterationDelay": 0,
              "onAnimationBegin": [Function],
              "onAnimationEnd": [Function],
              "onTransitionBegin": [Function],
              "onTransitionEnd": [Function],
              "source": 1,
              "style": Object {
                "height": 70,
                "width": 70,
              },
              "transition": undefined,
              "useNativeDriver": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
              "style": Object {
                "bottom": -2,
                "height": 70,
                "position": "absolute",
                "width": 70,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            bold={true}
            style={
              Object {
                "fontSize": 70,
              }
            }
          >
            
          </YuText>,
          "style": Object {
            "marginTop": 38,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "",
            "style": Object {
              "fontSize": 70,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isLoading": false,
          "label": "",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 74,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <withAnimatable(Image)
              animation="swing"
              delay={1000}
              direction="normal"
              iterationCount="infinite"
              iterationDelay={0}
              onAnimationBegin={[Function]}
              onAnimationEnd={[Function]}
              onTransitionBegin={[Function]}
              onTransitionEnd={[Function]}
              source={1}
              style={
                Object {
                  "height": 70,
                  "width": 70,
                }
              }
              useNativeDriver={false}
            />
            <Image
              source={1}
              style={
                Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
          </View>,
          <View
            style={
              Object {
                "marginTop": 38,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                }
              }
            >
              
            </YuText>
          </View>,
          <Button
            isLoading={false}
            label=""
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 74,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <withAnimatable(Image)
                animation="swing"
                delay={1000}
                direction="normal"
                iterationCount="infinite"
                iterationDelay={0}
                onAnimationBegin={[Function]}
                onAnimationEnd={[Function]}
                onTransitionBegin={[Function]}
                onTransitionEnd={[Function]}
                source={1}
                style={
                  Object {
                    "height": 70,
                    "width": 70,
                  }
                }
                useNativeDriver={false}
              />,
              <Image
                source={1}
                style={
                  Object {
                    "bottom": -2,
                    "height": 70,
                    "position": "absolute",
                    "width": 70,
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "swing",
                "delay": 1000,
                "direction": "normal",
                "duration": undefined,
                "easing": undefined,
                "iterationCount": "infinite",
                "iterationDelay": 0,
                "onAnimationBegin": [Function],
                "onAnimationEnd": [Function],
                "onTransitionBegin": [Function],
                "onTransitionEnd": [Function],
                "source": 1,
                "style": Object {
                  "height": 70,
                  "width": 70,
                },
                "transition": undefined,
                "useNativeDriver": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
                "style": Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                }
              }
            >
              
            </YuText>,
            "style": Object {
              "marginTop": 38,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "",
              "style": Object {
                "fontSize": 70,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isLoading": false,
            "label": "",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 74,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeCompleteScreen should render with the priamry button loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeCompleteScreen
    copy={
      Object {
        "ctaLabel": "",
        "heading": "",
      }
    }
    isLoading={true}
    onCtaPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <withAnimatable(Image)
            animation="swing"
            delay={1000}
            direction="normal"
            iterationCount="infinite"
            iterationDelay={0}
            onAnimationBegin={[Function]}
            onAnimationEnd={[Function]}
            onTransitionBegin={[Function]}
            onTransitionEnd={[Function]}
            source={1}
            style={
              Object {
                "height": 70,
                "width": 70,
              }
            }
            useNativeDriver={false}
          />
          <Image
            source={1}
            style={
              Object {
                "bottom": -2,
                "height": 70,
                "position": "absolute",
                "width": 70,
              }
            }
          />
        </View>,
        <View
          style={
            Object {
              "marginTop": 38,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 70,
              }
            }
          >
            
          </YuText>
        </View>,
        <Button
          isLoading={true}
          label=""
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 74,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <withAnimatable(Image)
              animation="swing"
              delay={1000}
              direction="normal"
              iterationCount="infinite"
              iterationDelay={0}
              onAnimationBegin={[Function]}
              onAnimationEnd={[Function]}
              onTransitionBegin={[Function]}
              onTransitionEnd={[Function]}
              source={1}
              style={
                Object {
                  "height": 70,
                  "width": 70,
                }
              }
              useNativeDriver={false}
            />,
            <Image
              source={1}
              style={
                Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animation": "swing",
              "delay": 1000,
              "direction": "normal",
              "duration": undefined,
              "easing": undefined,
              "iterationCount": "infinite",
              "iterationDelay": 0,
              "onAnimationBegin": [Function],
              "onAnimationEnd": [Function],
              "onTransitionBegin": [Function],
              "onTransitionEnd": [Function],
              "source": 1,
              "style": Object {
                "height": 70,
                "width": 70,
              },
              "transition": undefined,
              "useNativeDriver": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
              "style": Object {
                "bottom": -2,
                "height": 70,
                "position": "absolute",
                "width": 70,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            bold={true}
            style={
              Object {
                "fontSize": 70,
              }
            }
          >
            
          </YuText>,
          "style": Object {
            "marginTop": 38,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "",
            "style": Object {
              "fontSize": 70,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isLoading": true,
          "label": "",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 74,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <withAnimatable(Image)
              animation="swing"
              delay={1000}
              direction="normal"
              iterationCount="infinite"
              iterationDelay={0}
              onAnimationBegin={[Function]}
              onAnimationEnd={[Function]}
              onTransitionBegin={[Function]}
              onTransitionEnd={[Function]}
              source={1}
              style={
                Object {
                  "height": 70,
                  "width": 70,
                }
              }
              useNativeDriver={false}
            />
            <Image
              source={1}
              style={
                Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                }
              }
            />
          </View>,
          <View
            style={
              Object {
                "marginTop": 38,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                }
              }
            >
              
            </YuText>
          </View>,
          <Button
            isLoading={true}
            label=""
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 74,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <withAnimatable(Image)
                animation="swing"
                delay={1000}
                direction="normal"
                iterationCount="infinite"
                iterationDelay={0}
                onAnimationBegin={[Function]}
                onAnimationEnd={[Function]}
                onTransitionBegin={[Function]}
                onTransitionEnd={[Function]}
                source={1}
                style={
                  Object {
                    "height": 70,
                    "width": 70,
                  }
                }
                useNativeDriver={false}
              />,
              <Image
                source={1}
                style={
                  Object {
                    "bottom": -2,
                    "height": 70,
                    "position": "absolute",
                    "width": 70,
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "swing",
                "delay": 1000,
                "direction": "normal",
                "duration": undefined,
                "easing": undefined,
                "iterationCount": "infinite",
                "iterationDelay": 0,
                "onAnimationBegin": [Function],
                "onAnimationEnd": [Function],
                "onTransitionBegin": [Function],
                "onTransitionEnd": [Function],
                "source": 1,
                "style": Object {
                  "height": 70,
                  "width": 70,
                },
                "transition": undefined,
                "useNativeDriver": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
                "style": Object {
                  "bottom": -2,
                  "height": 70,
                  "position": "absolute",
                  "width": 70,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                }
              }
            >
              
            </YuText>,
            "style": Object {
              "marginTop": 38,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "",
              "style": Object {
                "fontSize": 70,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isLoading": true,
            "label": "",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 74,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
